<resources>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="none">None</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="unknown_user">Unknown user</string>
    <string name="connected">Connected</string>
    <string name="using_exit_node">Using exit node (%s)</string>
    <string name="not_connected">Not connected</string>
    <string name="empty" translatable="false"> </string>
    <string name="template" translatable="false">%s</string>
    <string name="selected">Selected</string>
    <string name="offline">Offline</string>
    <string name="ok">OK</string>
    <string name="_continue">Continue</string>
    <string name="warning">Warning</string>
    <string name="search">Search</string>
    <string name="search_ellipsis">Search...</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_results">No results</string>
    <string name="back">Back</string>
    <string name="clear_search">Clear search</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="try_again">Try again</string>
    <string name="cancel">Cancel</string>
    <string name="app_name" translatable="false">Tailscale</string>
    <string name="tile_name" translatable="false">Tailscale</string>
    <string name="version">Version</string>
    <string name="about_view_header">About Tailscale</string>
    <string name="about_view_title">Tailscale for Android</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="about_view_footnotes">WireGuard is a registered trademark of Jason A. Donenfeld.\n\n© Tailscale Inc. All rights reserved.\nTailscale is a registered trademark of Tailscale Inc.</string>
    <string name="managed_by">Managed by</string>
    <string name="bug_report_title">Report a bug</string>
    <string name="bug_report_instructions_prefix">To report a bug,&#160;</string>
    <string name="bug_report_instructions_linktext">contact our support team&#160;</string>
    <string name="bug_report_instructions_suffix"> and include the identifier below.</string>
    <string name="bug_report_id_desc">This ID helps us find the event in our diagnostic logs. This process does not share any of your personally-identifiable information.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_admin_prefix">"Manage your tailnet settings in the "</string>
    <string name="settings_admin_link">admin console</string>
    <string name="about_tailscale">About Tailscale</string>
    <string name="bug_report">Bug report</string>
    <string name="use_ts_dns">Use Tailscale DNS</string>
    <string name="internal_debug_options">Internal debug options</string>
    <string name="exit_node">EXIT NODE</string>
    <string name="exit_node_offline">EXIT NODE OFFLINE</string>
    <string name="running_exit_node">Running on this device</string>
    <string name="exit_node_offline_mdm_orgname">The exit node selected by %1$s is currently offline. Internet traffic is blocked. Contact a network administrator for help.</string>
    <string name="exit_node_offline_mdm">The exit node selected by your organization is currently offline. Internet traffic is blocked. Contact a network administrator for help.</string>
    <string name="starting">Starting…</string>
    <string name="connect_to_tailnet_prefix">"Connect again to talk to the other devices in the "</string>
    <string name="connect_to_tailnet_suffix">" tailnet."</string>
    <string name="welcome_to_tailscale">Welcome to Tailscale</string>
    <string name="login_to_join_your_tailnet">Log in to join your tailnet and connect your devices.</string>
    <string name="give_permissions">Set up a VPN connection so you can start using Tailscale.</string>
    <string name="keyExpiryExplainer">Reauthenticate to remain connected to Tailscale.</string>
    <string name="deviceKeyNeverExpires">Device key does not expire</string>
    <string name="deviceKeyExpires">Device key expires %s</string>
    <string name="deviceKeyExpired">Device key expired %s</string>
    <string name="key_expiry_notification_title">Tailscale sign-in expires soon</string>
    <string name="key_expiry_notification_body">Reauthenticate to keep this device connected to your tailnet.</string>
    <string name="machine_auth_required">Admin approval required</string>
    <string name="machine_auth_explainer">This device must be approved by an administrator before it can connect to the tailnet.</string>
    <string name="open_admin_console">Open admin console</string>
    <string name="needs_machine_auth">Authorization required</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="stop">Stop</string>
    <string name="os">OS</string>
    <string name="key_expiry">Key expiry</string>
    <string name="tailscale_addresses">Tailscale addresses</string>
    <string name="current_mdm_settings">Current MDM settings</string>
    <string name="mdm_settings">MDM settings</string>
    <string name="managed_by_orgName">Managed by %1$s</string>
    <string name="managed_by_explainer">Your organization is managing Tailscale on this device. Some features might have been customized or hidden by your system administrator.</string>
    <string name="managed_by_explainer_orgName">%1$s is managing Tailscale on this device. Some features might have been customized or hidden by your system administrator.</string>
    <string name="open_support">Open support</string>
    <string name="placeholder" translatable="false">--</string>
    <string name="please_login">Login required</string>
    <string name="stopped">Not connected</string>
    <string name="connect_to_vpn">Connect to VPN</string>
    <string name="under_a_minute">under a minute</string>
    <string name="in_x_minutes">in %d minutes</string>
    <string name="in_x_hours">in %d hours</string>
    <string name="in_x_days">in %d days</string>
    <string name="in_x_months">in %d months</string>
    <string name="in_x_years">in %.1f years</string>
    <string name="ago_x_minutes">%d minutes ago</string>
    <string name="ago_x_hours">%d hours ago</string>
    <string name="ago_x_days">%d days ago</string>
    <string name="ago_x_months">%d months ago</string>
    <string name="ago_x_years">%.1f years ago</string>
    <string name="logout_failed">Unable to logout at this time. Please try again.</string>
    <string name="error">Error</string>
    <string name="accounts">Accounts</string>
    <string name="add_account">Add another account</string>
    <string name="add_account_short">Add account</string>
    <string name="reauthenticate">Reauthenticate</string>
    <string name="switch_user_failed">Unable to switch users. Please try again.</string>
    <string name="add_profile_failed">Unable to add a new profile. Please try again.</string>
    <string name="invalidCustomUrl">Please enter a valid URL in the form https://server.com</string>
    <string name="invalidCustomURLTitle">Invalid URL</string>
    <string name="custom_control_menu">Use an alternate server</string>
    <string name="custom_control_menu_desc">Enter the URL of an alternate Tailscale server or your self-hosted Headscale server.</string>
    <string name="custom_control_placeholder" translatable="false">https://my.custom.server.com</string>
    <string name="auth_key_menu">Use an auth key</string>
    <string name="auth_key_title">Add an account using an auth key</string>
    <string name="auth_key_explanation">Enter a valid auth key generated by the Tailscale admin console</string>
    <string name="auth_key_placeholder">ie: tskey-auth-mYta1ln3tCNTRL-s3cr3tauthk3yFr0madM1n</string>
    <string name="invalidAuthKey">The provided auth key is not in the correct format.</string>
    <string name="invalidAuthKeyTitle">Invalid key</string>
    <string name="custom_control_url_title">Custom control server URL</string>
    <string name="auth_key_input_title">Auth key</string>
    <string name="delete_tailnet">Delete tailnet</string>
    <string name="contact_support">Contact support</string>
    <string name="request_deletion_nonowner">All requests related to the removal or deletion of data are handled by our Support team. To open a request, tap the Contact Support button below to be taken to our contact form in the browser. Complete the form, and a Customer Support Engineer will work with you directly to assist.</string>
    <string name="prevents_the_user_from_disconnecting_tailscale">Prevents the user from disconnecting Tailscale.</string>
    <string name="force_enabled_connection_toggle">Force enabled connection toggle</string>
    <string name="exit_node_id">Exit node ID</string>
    <string name="forces_the_tailscale_client_to_always_use_the_exit_node_with_the_given_id">Forces the Tailscale client to always use the exit node with the given ID.</string>
    <string name="managed_by_organization_name">Managed by - organization name</string>
    <string name="managed_by_caption">Managed by - caption</string>
    <string name="managed_by_url">Managed by - URL</string>
    <string name="shows_a_button_to_open_support_resources_next_to_the_organization_name">Shows a button to open support resources next to the organization name.</string>
    <string name="shows_the_given_caption_next_to_the_organization_name_in_the_client">Shows the given caption next to the organization name in the client.</string>
    <string name="shows_the_given_organization_name_in_the_client">Shows the given organization name in the client.</string>
    <string name="the_tailnet_policy_allows_the_organization_to_specify_a_tailnet">The Tailnet policy allows the organization to specify a tailnet, its identity provider will be used on the login page. If the policy value is prefixed with required:, Tailscale will force that identity provider to be used and won’t allow logging in with anything else.</string>
    <string name="required_suggested_tailnet">Required/Suggested Tailnet</string>
    <string name="custom_control_server_url">Custom control server URL</string>
    <string name="use_this_field_to_specify_a_custom_coordination_server_url_such_as_a_headscale_instance">Use this field to specify a custom coordination server URL, such as a Headscale instance.</string>
    <string name="hidden_network_devices">Hidden network devices</string>
    <string name="hides_the_specified_categories_of_network_devices_from_the_devices_list_in_the_client">Hides the specified categories of network devices from the devices list in the client.</string>
    <string name="allow_lan_access_when_using_an_exit_node">Allow LAN access when using an exit node</string>
    <string name="enable_posture_checking">Enable posture checking</string>
    <string name="use_tailscale_dns_settings">Use Tailscale DNS settings</string>
    <string name="use_tailscale_subnets">Use Tailscale subnets</string>
    <string name="allow_incoming_connections">Allow incoming connections</string>
    <string name="exit_node_picker_visibility">Exit node picker visibility</string>
    <string name="shows_or_hides_the_exit_node_picker_in_the_main_view_of_the_app">Shows or hides the exit node picker in the main view of the app.</string>
    <string name="shows_or_hides_the_tailnet_lock_configuration_ui">Shows or hides the Tailnet lock configuration UI.</string>
    <string name="manage_tailnet_lock_visibility">Manage Tailnet lock visibility</string>
    <string name="shows_or_hides_the_ui_to_run_the_android_device_as_an_exit_node">Shows or hides the UI to run the Android device as an exit node.</string>
    <string name="run_as_exit_node_visibility">Run as exit node visibility</string>
</resources>